<resources>
    <string name="app_name">c\'t SESAM Sync</string>
    <string name="server_domain_heading">Domain of the sync server:</string>
    <string name="path_heading">Path on the server:</string>
    <string name="certificate_heading">SSL certificate of the CA which signed the server certificate:</string>
    <string name="certificate_error_wrong_format">This is no valid certificate. Please use X.509 in pem format.</string>
    <string name="certificate_error_no_such_algorithm">This System does not support X.509 certificates. That might mean that no connection will be possible.</string>
    <string name="certificate_error_IO_Exception">Could not read certificate data. What did you enter?</string>
    <string name="certificate_error_Key_Store_Exception">The certificate could not be used. Is it correct?</string>
    <string name="username_heading">Username:</string>
    <string name="password_heading">Password:</string>
    <string name="sync_on_mobile_data_label">Sync on mobile data</string>
    <string name="test_button_label">Test connection</string>
    <string name="connection_send_error">The app was unable to send a request.</string>
    <string name="connection_JSON_Exception">The response was not in JSON format. The server is probably wrong.</string>
    <string name="connection_JSON_ButNotOk">The response was in JSON format but contained no OK. Maybe this server is no sync server but some other server that returns JSON data?</string>
    <string name="connection_ok">The connection was successfully tested.</string>
    <string name="acceptCertificateButton">accept</string>
    <string name="dismissCertificateButton">dismiss</string>
    <string name="popupHeading">The server presented a certificate chain with these fingerprints:</string>
    <string name="popupQuestion">Is this your server? Only accept the certificate if the fingerprint is correct.</string>
    <string name="deleteCertificate">delete the pinned certificate</string>
</resources>
